ckanext/pigma_theme/fanstatic/pigma_theme.css
.wrapper {
    background: none;
    border: 0;
    box-shadow: 0 0 0;
}

.dataset-heading {
    border-bottom: dotted 1px #ddd;
    padding-bottom: 8px;
    font-size: 15px;
}

.dataset-item {
    border-bottom: none;
    border-left: 2px solid #0072bc;
    padding: 10px 10px !important;
    margin-bottom: 35px;
    border-radius: 3px;
    background: #f9f9f9;
    position: relative;
}

.dataset-item-content {
    display: inline-block;
    vertical-align: top;
}

.dataset-item-content .dataset-heading {
    text-overflow:ellipsis;
    overflow-x:hidden;
    white-space:nowrap;
    width: calc(100% - 50px);
}

.dataset-item-content.text {
    width: calc(100% - 145px);
    padding-left: 20px;
}

.filters .nav-facet {
  flex-flow: column nowrap;
}

.secondary .nav-facet, .secondary .module-content, .primary article.module {
    background: #ffffff;
    padding-top: 2em;
}

.primary article.module .page-header.module-content {
  margin-top: -2em;
}


.secondary .nav-facet .nav-item a:hover {
    background-color: #0072bc26;
    color: #0072bc;
    font-weight: bold;
    font-style: italic;
}

.nav-item.active>a span, .nav-aside li.active a span {
    display: inline;
    white-space: normal;
}


.nav-item.active>a:before, .nav-aside li.active a:before {
    background-image: none;
}


.search-form .search-input.search-giant button {
    margin-top: -14px;
    right: 10px;
}

/*** Image dataset  ***/
.dataset-item-content.image {
    height: 140px;
    width: 140px;
	text-align: center;
    white-space: nowrap;
    margin-left: auto;
    margin-right: auto;
}
.dataset-item-content.image:before {
	content: "";
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}
.dataset-item-content.image img.dataset-thematic {
    /* clip-path: inset(0px 0px 130px 0px); */
    margin-top: 25%;
}
.dataset-item-content.image img.dataset-thumbnail {
    vertical-align: middle;
    max-height: 100%;
}

/*** Tags clickables - Type de donnees ***/
.label[data-format=donnees-ouvertes] {
    background-color: #FF6660;
}
.label[data-format=donnees-geographiques] {
    background-color: #0072bc;
}
.label[data-format=donnees-intelligentes] {
    background-color: #FFBA13;
}

.dataset-format a {
    background: #0072bc !important;
}


/*** Tag tracking_summary - Ressources ***/
.label.label-tracking {
    background: #fbb900;
    color: #000000;
}

/*** Bandeau lateral - Support ***/
.banner-support-wrap {
    position: absolute;
    right: 0;
    top: 0;
    overflow: hidden;
    width: 100px;
    height: 100px;
    cursor: default;
}


.banner-support {
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    transform: rotate(45deg);
    -webkit-transform-origin: top left;
    -moz-transform-origin: top left;
    -ms-transform-origin: top left;
    -o-transform-origin: top left;
    transform-origin: top left;
    position: absolute;
    right: 0;
    width: 120px;
    height: 21px;
    line-height: 22px;
    text-align: center;
    top: -18px;
    right: -54px;
    font-size: 12px;
    font-weight: bold;
    color: white;
    background-color: transparent;
}

.banner-support[data-format=alpi] {
    background-color: #2376A5;
}
.banner-support[data-format=na-mobilites] {
    background-color: #4B2B74;
}
.banner-support[data-format=cdg-47] {
    background-color: #4F1C4E;
}
.banner-support[data-format=atd-24] {
    background-color: #7C9A22;
}
.banner-support[data-format=gironde-numerique] {
    background-color: #EC6574;
}

#dataset-search-form .form_search, #dataset-search-form .form_search .field {
    background: none;
    margin: 0;
}

.wrapper::before {
    display: none;
}

.module-content, #dataset-search-form .form_search  {
    padding: 0 30px 30px;
}

.module .nav li {
    width: 100%;
    text-align: left;
}

#dataset-map {
    margin-bottom: 15px;
}

.btn {
    padding: 1.4rem 2rem;
    font-size: 1.2em;
    border: 0;
    display: inline-block;
    font-size: 1.2rem;
}
.btn:hover, .btn:focus {
    background-color: #0072bc;
    color: white;
    border: 0;
}
.btn:after {
  display: none;
}
.btn-xs {
  padding: 1px 5px;
  text-transform: none;
  font-weight: normal;
  font-size: 85%;
}

.module-heading .action:hover {
    color: #0072bc;
}
.module-narrow .nav-item a {
    display: flex;
    /*! height: auto; */
    /*! line-height: 1em; */
}
.module-narrow .nav-item a span {
    /*! float: left; */
}
.filters .badge {
    background-color: #0072bc;
    font-style: normal;
    line-height: 1em;
    font-size: 1em;
    padding: 0 0 2px 0;
    display: flex;
    margin: 0 0 0 10px;
    width:1.2em;
    align-items: center;
    justify-content: center;
    height: 1.2em;
}
.dataset-item-organization-title {
    margin-top: 8px;
}
.dataset-format .label {
    display: inline-block;
    padding: .4em .6em;
    font-size: 1em;
    line-height: 1em;
}

.module:first-child .module-heading {

    border-radius: 3px 0 0 0;
    border-top-width: 0;

}
.module-narrow .module-heading, .module-narrow .module-content, .module-narrow .module-footer {

    padding-left: 15px;
    padding-right: 15px;

}
.module-heading {

    margin: 0;
    padding: 10px 25px;
        padding-right: 25px;
        padding-left: 25px;
    font-size: 14px;
    line-height: 1.3;
    background-color: #f6f6f6;
    border-top: 1px solid #dddddd;
        border-top-width: 1px;
    border-bottom: 1px solid #dddddd;

}
h2 {
    font-weight: 700;
}

.select2-container {
  padding: 0;
  border: 0;
}
[role=main] .nav li a {
  text-transform: none;
}
[role=main] header .nav li a {
  white-space: nowrap;
  text-transform: uppercase;
}
h1 {
  text-transform: none;
}
.module h1 {
  font-size: 2.5rem;
}
.page-heading {
  padding-top: .5em;
}


.resource-list .btn {
  padding: 0.7em 1em;
}
.module-resource .actions {
 top: 1em;
}
.media-grid {
  clear: both;
}

.resources .nav {
  flex-flow: column;
}

fieldset.checkboxes label input[type=checkbox] {
  width: 1em;
}
.search-form::before, .search-form::after {
    display: none;
}
.search-form {
    display: block;
    position: relative;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0;
    background-color: transparent;
    -webkit-transform: none;
    transform: none;
    z-index: 1;
    border: 0;
    margin: 0;
}
.search-form .btn  {
    padding: 1.2rem 2rem;
}
.search-form .btn .fa-search {
    font-size: 22px;
}

